# lung-cancer-prediction-bcc

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
Main Projet Folder with doc (cookie cutter data sciences)/: .gitignore  Makefile  requirements.txt
Main Projet Folder with doc (cookie cutter data sciences)/notebooks/: PREDICTION SCRIPT.ipynb
Main Projet Folder with doc (cookie cutter data sciences)/reports/: FORMULATION DU PROBLEME.html
Main Projet Folder with doc (cookie cutter data sciences)/skin_cancer_prediction_bcc/: __init__.py  plots.py  prediction_script.py
Web Django Projet For Testing/TestingSkinCancerWebApp/: README.MD  manage.py  requirements.txt  setup_and_run.py
docs/: mkdocs.yml
docs/docs/: index.md
lung_cancer_prediction_bcc/: __init__.py  dataset.py  features.py  plots.py
lung_cancer_prediction_bcc/modeling/: predict.py  train.py
models/: random_forest_model_by_performer.pkl
models/LOGISTIC REGRESSION/: model_logreg_28L.pkl  model_logreg_28RGB.pkl  model_logreg_8L.pkl
notebooks/: Exploratory_Analysis_Fox.ipynb  Exploratory_analysis_Performer.ipynb  TESTS.ipynb  exploratory-analysis-gates.ipynb  model_trained_28L.pkl  model_trained_28RGB.pkl  model_trained_8L.pkl  model_trained_8RGB.pkl  scaler_28L.pkl  scaler_28RGB.pkl  scaler_8L.pkl  scaler_8RGB.pkl
notebooks/ENTRAINEMENT/: ENTRAINEMENT DU MODELE_28_L.ipynb  ENTRAINEMENT DU MODELE_8_L.ipynb  ENTRAINEMENT DU MODELE_8_RGB.ipynb
reports/: FORMULATION DU PROBLEME.html
skin_cancer_prediction_bcc/: dataset.py  features.py
(+26 files in other folders)
