[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "lung_cancer_prediction_bcc"
version = "0.0.1"
description = "Un Projet de machine learning dont le but est la prediction du cancer de la peau de type BCC dans un premier temps , et l'etendre a d'autres types par la suite."
authors = [
  { name = "M1-GI" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["lung_cancer_prediction_bcc"]
force_sort_within_sections = true
